--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DEBUG= "PROYECTO-CHATBOT"
 
 Contraseña_Obligatoria = "Jocelyn-Lisette-Maximiliano-Ramiro"
 
+token = "ULTKS2GPZQCNPYZYVTIYQY3Y5CULJQ26"
+
+mongo = "mongodb://localhost:27017/chatbot"
