--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "dependencies": {
     "archiver": "^7.0.1",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
@@ -22,8 +24,11 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
