--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ Contraseña_Obligatoria = "Jocelyn-Lisette-Maximiliano-Ramiro"
 token = "ULTKS2GPZQCNPYZYVTIYQY3Y5CULJQ26"
 
 mongo = "mongodb://localhost:27017/chatbot"
+
+JWT_SECRET= M@ximiliano123456789
