--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
