proteccion server y login

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 
-Puerto = 1010
+PUERTO = 1010
 
 DEBUG= "PROYECTO-CHATBOT"
 
-Contraseña_Obligatoria = "Jocelyn-Lisette-Maximiliano-Ramiro"
+APP_SECRET = "Jocelyn-Lisette-Maximiliano-Ramiro"
 
-token = "ULTKS2GPZQCNPYZYVTIYQY3Y5CULJQ26"
+WIT_TOKEN = "ULTKS2GPZQCNPYZYVTIYQY3Y5CULJQ26"
 
-mongo = "mongodb://localhost:27017/chatbot"
+MONGO_URI = "mongodb://localhost:27017/chatbot"
 
 JWT_SECRET= M@ximiliano123456789
