--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "ejs": "^3.1.10",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
