--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
