conexion del CHAT

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ WIT_TOKEN = "77TJSFDHQODPOWMUCAPHG3WSL2VBHSAM"
 
 MONGO_URI = "mongodb://localhost:27017/chatbot"
 
-JWT_SECRET= M@ximiliano123456789
+JWT_SECRET= "M@ximiliano123456789"
