--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
