--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ WIT_TOKEN = "77TJSFDHQODPOWMUCAPHG3WSL2VBHSAM"
 MONGO_URI = "mongodb://localhost:27017/chatbot"
 
 JWT_SECRET= "M@ximiliano123456789"
+
+URL_SECRETA = ""
