--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
