--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
+  "devDependencies": {
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
@@ -26,20 +26,18 @@
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
-    "helmet": "^8.0.0",
+    "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
     "pdfkit": "^0.16.0",
     "uuid": "^11.1.0",
-    "validator": "^13.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "validator": "^13.15.0"
   }
 }
