--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "pdfkit": "^0.16.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.0"
+  },
+  "dependencies": {
+    "qs": "^6.14.0"
   }
 }
